--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -39,7 +39,7 @@
     margin-right: 20px;
     transition: color 0.4s ease;
     font-weight: 500;
-    font-family: 'Caveat', cursive;
+    font-family: "Open Sans";
 }
 .link-option:hover {
      color: #312d8a;
