--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -9,8 +9,8 @@
     overflow: auto;
     background-size: cover;
     flex-shrink: 0;
-    background-color: #7ce6e1;
-background-image: linear-gradient(53deg, #7ce6e1 0%, #eeed58 51%, #ff9a2f 100%);
+    background: rgb(34,193,195);
+    background: linear-gradient(75deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 
 }
   
@@ -26,7 +26,7 @@ background-image: linear-gradient(53deg, #7ce6e1 0%, #eeed58 51%, #ff9a2f 100%);
       color: #478f75;
   }
   .greeting{
-    opacity: 0.3;
+    opacity: 0.5;
     font-size: 14px;
   }
   
@@ -109,7 +109,7 @@ background-image: linear-gradient(53deg, #7ce6e1 0%, #eeed58 51%, #ff9a2f 100%);
       justify-content: space-between;
       width: 90%;
       align-items: center;
-      border-left: #09759c solid 4px;
+      border-left: rgba(253,187,45,1) solid 4px;
       border-top-left-radius: 15px;
       border-bottom-left-radius: 15px;
       padding-left: 15px;
