--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -13,6 +13,7 @@
 }
 .image{
     width: 100%;
+    height: 160px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
@@ -22,14 +23,14 @@
 .project-card{
     list-style: none;
     margin-right: 20px;
-    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    background: rgb(163,163,159);
+    background: linear-gradient(176deg, rgba(163,163,159,1) 0%, rgba(248,251,244,0.9529936974789917) 57%);
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: all 0.6s ease;
     position: relative;
     width: 100%;
+    border-radius: 10px;
 }
 @media screen and (min-width: 568px) and (max-width: 767px) {
      .project-card{
@@ -74,8 +75,9 @@
     margin-bottom: 10px;
     font-weight: 500;
     transition: all 0.3s ease;
-    font-family: "Roboto";
-    background-color: #d1cfcd;
+    font-family: "Open Sans";
+    font-size: 14px;
+    background-color: #dce0dd;
     font-weight: 500;
 }
 
