My Portfoliowebsite change 6

--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -64,7 +64,7 @@
     font-family: 'Bricolage Grotesque', sans-serif;
 }
 .topics-heading{
-    color: #09759c;
+    color: #0e805a;
     font-weight: 500;
     font-family: 'Bricolage Grotesque', sans-serif;
 }
