--- a/src/Components/ContactUs/index.css
+++ b/src/Components/ContactUs/index.css
@@ -20,6 +20,7 @@
     border: #a3a29e solid 1px;
     border-radius: 5px;
     font-size: 17px;
+    font-family: "Open Sans";
     outline: none;
 }
 .label {
@@ -32,14 +33,72 @@
     height: 100px;
     font-size: 17px;
     width: 100%;
+    font-family: "Open Sans";
+    font-weight: 500;
     outline: none;
     border: #a3a29e solid 1px;
+}
+.send-btn-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.wish{
+    font-family: 'Bricolage Grotesque', sans-serif;
+    font-size: 20px;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    animation: slideRight 1s ease forwards, transform 0.6s ease;
+    position: relative;
+}
+@keyframes slideRight {
+    from{
+         transform: translateX(30px);
+         opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.smile-icon{
+    color: #d1a821;
+    margin-left: 5px;
 }
 
 .error-msg{
     font-size: 14px;
     margin-top: 2px;
     color: red;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.btn-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+.refresh-btn{
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    font-size: 28px;
+    font-weight: 600;
+    background-color: #c0c1c4;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3px;
+    position: relative;
+    transition: all 0.6s ease;
+    
+}
+
+.refresh-btn:hover{
+    transform: scale(1.1) rotate(40deg);
 }
 
 .hand-icon{
@@ -71,10 +130,15 @@
     border-radius: 10px;
     font-weight: 600;
     outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 18px;
-    margin-top: 15px;
-    align-self: flex-end;
+    cursor: pointer;
     border: none;
+  }
+  .send-icon {
+      margin-left: 4px;
   }
  
 
