--- a/src/Components/ContactUs/index.css
+++ b/src/Components/ContactUs/index.css
@@ -40,13 +40,13 @@
 }
 .send-btn-container {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     margin-top: 10px;
+    margin-right: 10px;
 }
 .wish{
     font-family: 'Bricolage Grotesque', sans-serif;
-    font-size: 20px;
-    margin-left: 20px;
+    font-size: 14px;
     display: flex;
     align-items: center;
     animation: slideRight 1s ease forwards, transform 0.6s ease;
@@ -78,6 +78,7 @@
     align-items: center;
     width: 100%;
     justify-content: space-between;
+    margin: 0;
 }
 .refresh-btn{
     cursor: pointer;
@@ -88,17 +89,19 @@
     font-weight: 600;
     background-color: #c0c1c4;
     border-radius: 30px;
+    margin-bottom: auto;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 3px;
     position: relative;
-    transition: all 0.6s ease;
-    
+    transition: all 0.4s ease;
 }
 
 .refresh-btn:hover{
-    transform: scale(1.1) rotate(40deg);
+    transform: scale(1.1) rotate(40deg) !important;
+    
 }
 
 .hand-icon{
@@ -147,4 +150,15 @@
     color: #fff;
     text-decoration: none;
   }
- 
+ @media screen and (min-width: 568px){
+    .send-btn-container{
+        flex-direction: row;
+    }
+    .wish {
+        font-size: 18px;
+        margin-left: 7px;
+    }
+    .refresh-btn{
+        margin-top: 20px;
+    }
+ }
