--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -9,8 +9,8 @@
     overflow: auto;
     background-size: cover;
     flex-shrink: 0;
-    background: rgb(34,193,195);
-    background: linear-gradient(75deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    background-color: #F4D03F;
+    background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
 
 }
   
@@ -109,7 +109,7 @@
       justify-content: space-between;
       width: 90%;
       align-items: center;
-      border-left: rgba(253,187,45,1) solid 4px;
+      border-left: #16A085 solid 4px;
       border-top-left-radius: 15px;
       border-bottom-left-radius: 15px;
       padding-left: 15px;
